# ToyRenderEngine

./: .gitignore  CMakeLists.txt  README.md
assets/: cornell-box.mtl
glsl/: comp.glsl  fragment.glsl  g_frag.glsl  g_vert.glsl  sm_vert.glsl  ssao_frag.glsl  ssao_vert.glsl  vertex.glsl
glsl/tess/: frag.glsl  tessC.glsl  tessE.glsl  vert.glsl
glsl/universe/: fragment.glsl  vertex.glsl
src/: Engine.h  ImportedModel.cc  ImportedModel.h  RenderingProgram.cc  RenderingProgram.h  Sphere.h  TessEngine.h  error.h  files.h  logger.h  main.cc  material.h
src/RenderingEngine/: Lights.h  RenderingEngine.cc  RenderingEngine.h  RenderingEngineDefault.cc  RenderingEngineDefault.h  RenderingModel.cc  RenderingModel.h  RenderingSettings.h  RenderingStore.cc  RenderingStore.h  ShadowMap.h
